# madrugada2

./: .editconfig  .gitignore  build.gradle.kts  settings.gradle
app/: build.gradle.kts
app/src/androidTest/java/ru/petrolplus/pos/room/: ExampleInstrumentedTest.kt
app/src/androidTest/java/ru/petroplus/pos/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/ru/petrolplus/pos/: App.kt
app/src/main/java/ru/petrolplus/pos/di/: AppComponent.kt  AppComponentDependencies.kt  AppModule.kt  MainScreenComponent.kt  MainScreenComponentDependencies.kt  MainScreenModule.kt  NetworkComponentModule.kt  SubcomponentModule.kt
app/src/main/java/ru/petroplus/pos/: App.kt
app/src/main/java/ru/petroplus/pos/di/: AppComponent.kt  AppComponentDependencies.kt  AppModule.kt  MainScreenComponent.kt  MainScreenComponentDependencies.kt  MainScreenModule.kt  NetworkComponentModule.kt  SubcomponentModule.kt
app/src/main/java/ru/petroplus/pos/ui/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: network_security_config.xml
app/src/test/java/ru/petroplus/pos/: ExampleUnitTest.kt
buildSrc/: build.gradle.kts
buildSrc/src/main/java/: ComposePlugin.kt  ConventionPlugin.kt  Dependencies.kt
config/: detekt.yml
core/: build.gradle.kts
core/src/main/: AndroidManifest.xml
core/src/main/java/ru/petrolplus/pos/core/: Features.kt
core/src/main/java/ru/petroplus/pos/core/: Features.kt
data_evotorsdk/: build.gradle.kts
data_evotorsdk/src/main/: AndroidManifest.xml
data_evotorsdk/src/main/java/ru/petrolplus/pos/evotorsdk/: EvotorSDKRepository.kt
data_network/: build.gradle.kts
data_network-worker/: build.gradle.kts
data_networkapi/: build.gradle.kts
data_networkapi/src/main/java/ru/petrolplus/pos/networkapi/: GatewayServerApi.kt  GatewayServerRepositoryApi.kt
data_persistence/: build.gradle.kts
data_persistence/src/androidTest/java/ru/petrolplus/pos/: ReceiptPersistenceTest.kt
data_persistence/src/main/java/ru/petrolplus/pos/persitence/: BaseSettingsPersistence.kt  CommonSettingsPersistence.kt  GUIDParamsPersistence.kt  ReceiptParamsPersistence.kt  ReceiptPersistence.kt  ServicesPersistence.kt  SettingsPersistence.kt  ShiftParamsPersistence.kt  StoreStrategy.kt  TransactionsPersistence.kt
data_room/: build.gradle.kts
data_room/src/androidTest/java/ru/petrolplus/pos/: ReceiptProjectionTest.kt  TransactionsTests.kt
data_room/src/main/java/ru/petrolplus/pos/room/: SomeClass.kt
data_sdkapi/src/main/: AndroidManifest.xml
data_sdkapi/src/main/java/ru/petrolplus/pos/sdkapi/: CardReaderRepository.kt  ISDKRepository.kt
evatorPrinter/: build.gradle.kts
evatorPrinter/src/androidTest/java/ru/petroplus/pos/evatorprinter/: ExampleInstrumentedTest.kt
evatorPrinter/src/main/java/ru/petroplus/pos/evatorprinter/: EvatorPrinterApiImpl.kt  EvotorDocumentInflater.kt  EvotorPrinterApiImpl.kt
evatorPrinter/src/test/java/ru/petroplus/pos/evatorprinter/: ExampleUnitTest.kt
evotorPrinter/: build.gradle.kts
evotorPrinter/src/main/java/ru/petrolplus/pos/evotorprinter/: EvotorPrinterRepositoryImpl.kt  GeneralComponents.kt  ServiceComponents.kt  ShiftReportComponents.kt  TerminalComponents.kt
evotorPrinter/src/main/java/ru/petroplus/pos/evotorprinter/: EvotorDocumentInflater.kt  EvotorPrinterApiImpl.kt  EvotorPrinterRepositoryImpl.kt  GeneralComponents.kt  ServiceComponents.kt  ShiftReportComponents.kt  TerminalComponents.kt
evotorPrinter/src/main/res/values/: strings.xml
evotorlib/: build.gradle.kts
evotorsdk/: build.gradle.kts
evotorsdk/src/libs/: devicecommons-704070-release.aar
evotorsdk/src/main/java/ru/petrolplus/pos/evotorsdk/: EvotorSDKRepository.kt
evotorsdk/src/main/java/ru/petroplus/pos/evotorsdk/: EvotorISDKRepository.kt  EvotorSDKRepository.kt  EvotorServiceConnection.kt
evotorsdk/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
mainscreen/: build.gradle.kts
mainscreen/src/main/: AndroidManifest.xml
mainscreen/src/main/res/values/: strings.xml
nativelib/: build.gradle.kts
nativelib/src/main/: AndroidManifest.xml
nativelib/src/main/cpp/: Callbacks.h  ConvertMapJni.cpp  DLLBlanck.cpp
nativelib/src/main/java/ru/petroplus/pos/nativelib/: NativeCallListener.java  NativeLib.kt  (+2 more)
network/: build.gradle.kts
network-worker/: build.gradle.kts
networkapi/: build.gradle.kts
networkapi/network/auth/: AuthenticationParameters.kt
networkapi/network/ssl/: SSLContextFactory.kt  TrustAllX509TrustManager.kt
p7lib/: build.gradle.kts
p7lib/src/main/cpp/: CMakeLists.txt  CallbackController.cpp  CallbackController.h  ConvertMapJni.h  DLLBlanck.h  TypesConversions.cpp  TypesConversions.h  nativelib.cpp  p7lib.cpp
p7lib/src/main/cpp/libP7Lib/: CMakeLists.txt
p7libapi/: build.gradle.kts
persistence/: build.gradle.kts
persistence/src/androidTest/java/ru/petrolplus/pos/: ReceiptPersistenceTest.kt
persistence/src/main/res/values/: strings.xml
presentation_evotorPrinter/: build.gradle.kts
presentation_mainscreen/: build.gradle.kts
presentation_mainscreen/src/main/assets/: master-cacert.pem
presentation_printerApi/: build.gradle.kts
presentation_printerApi/src/main/res/values/: strings.xml
presentation_ui/: build.gradle.kts
printerApi/: build.gradle.kts
printerApi/src/main/res/values/: strings.xml
resources/: build.gradle.kts
resources/src/main/assets/: client_cert.pfx  transaction_fields.json
resources/src/main/res/raw/: user.cer
resources/src/main/res/values/: strings.xml
room/: build.gradle.kts
room/src/androidTest/java/ru/petrolplus/pos/: ReceiptProjectionTest.kt  TransactionsTests.kt
room/src/debug/assets/: prepopulated-database.db
scripts/: pre-commit
sdkapi/: build.gradle.kts
sdkapi/src/main/: AndroidManifest.xml
ui/: build.gradle.kts
ui/src/main/: AndroidManifest.xml
ui/src/main/assets/: guid_fields.json  services.json
ui/src/main/java/ru/petroplus/pos/: Features.kt
ui/src/main/res/values/: strings.xml
util/: build.gradle.kts
util/src/main/: AndroidManifest.xml
util/src/main/res/raw/: user.cer
(+471 files in other folders)
